--- a/fund-leaders/implementation/team-requirements.mdx
+++ b/fund-leaders/implementation/team-requirements.mdx
@@ -1,230 +1,491 @@
 ---
 title: "Team Requirements & Skills"
-description: "Understand the human resources and skills needed for successful Amos implementation"
+description: "Essential roles, skills, and organizational structure needed for successful Amos implementation and ongoing operations"
 ---
 
 # Team Requirements & Skills
 
-## Implementation Team Structure
+Building the right team is critical for successful Amos implementation and long-term value realization. This guide outlines the necessary roles, skills, and organizational structure to ensure your implementation succeeds and your team is prepared for ongoing operations.
 
-Successful Amos implementations require a cross-functional team with representation from key stakeholder groups. The team structure scales with fund size and implementation complexity.
+## Core Implementation Team
 
-## Core Team Roles
-
-### Executive Sponsor
-**Responsibility**: Strategic oversight and organizational alignment
+### Executive Sponsor (COO/CFO Level)
+**Time Commitment**: 2-4 hours/week | **Duration**: Full project lifecycle
 
 <CardGroup cols={2}>
-  <Card title="Key Activities" icon="crown">
-    - Project vision and success criteria definition
-    - Resource allocation and priority setting
-    - Stakeholder communication and change management
-    - Issue escalation and decision-making
+  <Card title="Primary Responsibilities" icon="crown">
+    - Strategic vision and success criteria definition
+    - Resource allocation and budget approval
+    - Organizational change advocacy and communication
+    - Escalation resolution and decision authority
+    - Stakeholder alignment and conflict resolution
   </Card>
-  <Card title="Ideal Profile" icon="user">
-    - C-level or senior leadership role
-    - Strong organizational influence
-    - Data and technology advocacy
-    - Change management experience
+  <Card title="Required Qualifications" icon="user-check">
+    - C-level or senior VP with P&L responsibility
+    - Strong organizational influence and credibility
+    - Experience with technology transformation projects
+    - Change management and communication skills
+    - Understanding of fund operations and data challenges
   </Card>
 </CardGroup>
+
+**Success Factors**:
+- Visible commitment and regular participation in key meetings
+- Clear communication of project importance to organization
+- Willingness to make difficult decisions and drive change
+- Active removal of organizational barriers and resistance
 
 ### Project Manager
-**Responsibility**: Day-to-day project coordination and execution
+**Time Commitment**: 20-30 hours/week | **Duration**: Full project lifecycle
 
 <CardGroup cols={2}>
-  <Card title="Key Activities" icon="tasks">
-    - Project planning and timeline management
-    - Cross-team coordination and communication
-    - Risk identification and mitigation
-    - Progress tracking and reporting
+  <Card title="Primary Responsibilities" icon="tasks">
+    - End-to-end project planning and execution
+    - Cross-functional team coordination and communication
+    - Risk identification, assessment, and mitigation
+    - Timeline management and milestone tracking
+    - Quality assurance and deliverable validation
   </Card>
-  <Card title="Required Skills" icon="clipboard-check">
-    - Project management certification (PMP preferred)
-    - Technology implementation experience
-    - Financial services knowledge
-    - Strong communication and organization skills
+  <Card title="Required Qualifications" icon="clipboard-check">
+    - PMP or equivalent project management certification
+    - 5+ years technology implementation experience
+    - Financial services or fund management background
+    - Strong analytical and problem-solving skills
+    - Excellent communication and stakeholder management
   </Card>
 </CardGroup>
+
+**Key Skills**:
+- Agile and waterfall project methodologies
+- Risk management and issue resolution
+- Vendor management and contract oversight
+- Change management and user adoption strategies
 
 ### Technical Lead
-**Responsibility**: Integration architecture and technical implementation
+**Time Commitment**: 15-20 hours/week | **Duration**: Implementation + 6 months post-go-live
 
 <CardGroup cols={2}>
-  <Card title="Key Activities" icon="code">
-    - System integration design and oversight
-    - Data mapping and transformation logic
+  <Card title="Primary Responsibilities" icon="code">
+    - Technical architecture design and validation
+    - System integration oversight and troubleshooting
+    - Data mapping and transformation logic review
     - Security and compliance implementation
-    - Technical troubleshooting and optimization
+    - Performance optimization and scalability planning
   </Card>
-  <Card title="Required Skills" icon="wrench">
-    - Systems integration experience
-    - Database and API knowledge
-    - Financial data understanding
-    - Security and compliance awareness
+  <Card title="Required Qualifications" icon="wrench">
+    - 7+ years systems integration experience
+    - Strong database and API development skills
+    - Financial data and fund operations knowledge
+    - Security and compliance framework understanding
+    - Cloud infrastructure and deployment experience
   </Card>
 </CardGroup>
 
-### Business Analyst
-**Responsibility**: Process design and user requirements
+**Technical Expertise**:
+- SQL and database design/optimization
+- REST API development and integration
+- ETL/ELT processes and data pipelines
+- Cloud platforms (AWS, Azure, or GCP)
+- Security protocols and data governance
+
+### Business Process Owner
+**Time Commitment**: 10-15 hours/week | **Duration**: Full project lifecycle
 
 <CardGroup cols={2}>
-  <Card title="Key Activities" icon="chart-bar">
-    - Current state process documentation
-    - Future state process design
-    - User requirements gathering and validation
-    - Training material development
+  <Card title="Primary Responsibilities" icon="chart-bar">
+    - Current state process documentation and analysis
+    - Future state process design and optimization
+    - Business requirements gathering and validation
+    - User acceptance testing coordination
+    - Training material development and delivery
   </Card>
-  <Card title="Required Skills" icon="lightbulb">
-    - Business process analysis experience
-    - Fund operations knowledge
-    - Requirements gathering expertise
-    - Training and documentation skills
+  <Card title="Required Qualifications" icon="lightbulb">
+    - 5+ years fund operations or similar experience
+    - Deep understanding of reporting and analytics needs
+    - Business process analysis and improvement skills
+    - Strong communication and training abilities
+    - Change management and user adoption experience
   </Card>
 </CardGroup>
 
 ## Extended Team Members
 
-### Data Steward
-**Part-time role focused on data quality and governance**
-- Data validation and cleansing oversight
+### Data Steward (Part-time, 5-10 hours/week)
+**Responsibilities**:
+- Data quality validation and monitoring
 - Business rule definition and maintenance
-- Data quality monitoring and reporting
+- Data governance policy implementation
+- User training on data standards and procedures
 
-### End User Champions
-**Representatives from key user groups**
-- Requirements validation and feedback
-- User acceptance testing coordination
-- Peer training and support
+**Ideal Profile**: Operations analyst with strong attention to detail and understanding of fund data requirements
 
-### IT Security Specialist
-**Ensures security and compliance requirements**
+### Department Champions (2-3 hours/week each)
+**Representatives from**:
+- **Fund Operations**: Portfolio reporting and performance analysis
+- **Investor Relations**: LP reporting and communication requirements
+- **Compliance**: Regulatory reporting and audit trail needs
+- **Finance**: Management reporting and budgeting processes
+
+**Responsibilities**:
+- Requirements validation from departmental perspective
+- User acceptance testing and feedback
+- Peer training and change management support
+- Ongoing optimization and enhancement requests
+
+### IT Security Specialist (Consultant or Part-time)
+**Responsibilities**:
 - Security architecture review and approval
 - Compliance validation and documentation
-- Access control and audit trail setup
+- Access control and audit trail configuration
+- Ongoing security monitoring and maintenance
 
-## Skill Development & Training
+## Organizational Structure & Governance
 
-### Technical Skills
+### Steering Committee
+**Composition**: Executive Sponsor, Project Manager, Technical Lead, Department Heads
+**Meeting Cadence**: Monthly during implementation, quarterly post-go-live
+**Responsibilities**:
+- Strategic oversight and resource allocation
+- Issue escalation and decision-making
+- Success criteria validation and measurement
+- Continuous improvement prioritization
+
+### Working Team
+**Composition**: Project Manager, Technical Lead, Business Process Owner, Data Steward
+**Meeting Cadence**: Weekly during implementation, bi-weekly post-go-live
+**Responsibilities**:
+- Day-to-day project execution and coordination
+- Technical and business issue resolution
+- Quality assurance and testing oversight
+- User training and support coordination
+
+### User Advisory Group
+**Composition**: Department Champions, Key End Users, Subject Matter Experts
+**Meeting Cadence**: Bi-weekly during implementation, monthly post-go-live
+**Responsibilities**:
+- Requirements validation and feedback
+- User acceptance testing and sign-off
+- Training needs assessment and delivery
+- Adoption measurement and optimization
+
+## Skills Development Framework
+
+### Technical Skills by Role
+
 <Tabs>
-  <Tab title="Data Management">
-    - Data modeling and architecture concepts
-    - ETL processes and data transformation
+  <Tab title="Technical Lead">
+    **Core Competencies**:
+    - Database design and SQL optimization
+    - API development and integration patterns
+    - Data modeling and ETL processes
+    - Cloud infrastructure and security
+    - Performance monitoring and troubleshooting
+
+    **Training Needs**:
+    - Amos platform architecture and APIs
+    - Fund-specific data models and relationships
+    - Integration best practices and patterns
+    - Security and compliance requirements
+  </Tab>
+  
+  <Tab title="Business Process Owner">
+    **Core Competencies**:
+    - Business process analysis and design
+    - Requirements gathering and documentation
+    - User training and change management
+    - Data analysis and reporting concepts
+    - Quality assurance and testing methodologies
+
+    **Training Needs**:
+    - Amos platform capabilities and limitations
+    - Data visualization and reporting tools
+    - Process optimization methodologies
+    - User adoption and change management strategies
+  </Tab>
+  
+  <Tab title="Data Steward">
+    **Core Competencies**:
     - Data quality assessment and improvement
-    - Database query and reporting skills
-  </Tab>
-  <Tab title="Integration">
-    - API concepts and implementation
-    - System integration patterns
-    - File transfer and batch processing
-    - Error handling and monitoring
-  </Tab>
-  <Tab title="Analytics">
-    - Business intelligence concepts
-    - Report design and development
-    - Dashboard creation and optimization
-    - Performance metrics and KPIs
+    - Business rule definition and validation
+    - Data governance policies and procedures
+    - Basic SQL and data analysis skills
+    - Documentation and training development
+
+    **Training Needs**:
+    - Amos data quality monitoring tools
+    - Fund data standards and definitions
+    - Data governance best practices
+    - User support and troubleshooting techniques
   </Tab>
 </Tabs>
 
-### Business Skills
-<Tabs>
-  <Tab title="Fund Operations">
-    - Portfolio management processes
-    - Investor reporting requirements
-    - Regulatory compliance obligations
-    - Risk management frameworks
-  </Tab>
-  <Tab title="Change Management">
-    - Stakeholder engagement strategies
+### Business Skills Development
+
+<AccordionGroup>
+  <Accordion title="Fund Operations Knowledge">
+    **Essential Understanding**:
+    - Portfolio management and performance measurement
+    - Investor reporting requirements and timelines
+    - Regulatory compliance obligations (SEC, CFTC, etc.)
+    - Risk management and monitoring frameworks
+    - Capital call and distribution processes
+
+    **Development Approach**:
+    - Cross-training with experienced operations staff
+    - Industry conference attendance and certification programs
+    - Vendor training on fund administration systems
+    - Regulatory update sessions and compliance training
+  </Accordion>
+
+  <Accordion title="Change Management Capabilities">
+    **Key Competencies**:
+    - Stakeholder analysis and engagement strategies
     - Communication planning and execution
-    - Training program development
+    - Training program development and delivery
+    - Resistance identification and mitigation
     - Adoption measurement and optimization
-  </Tab>
-  <Tab title="Project Management">
-    - Agile and waterfall methodologies
-    - Risk assessment and mitigation
-    - Resource planning and allocation
-    - Quality assurance and testing
-  </Tab>
-</Tabs>
 
-## Resource Allocation Guidelines
+    **Development Resources**:
+    - Change management certification programs (Prosci, Kotter)
+    - Internal mentoring with experienced change agents
+    - External consulting support for complex transformations
+    - Best practice sharing with other fund implementations
+  </Accordion>
 
-### Small Funds (< $500M AUM)
-- **Core Team**: 3-4 people (25-50% time commitment)
-- **Duration**: 8-16 weeks
-- **Total Effort**: 15-25 person-weeks
+  <Accordion title="Data and Analytics Literacy">
+    **Foundation Skills**:
+    - Data quality concepts and measurement
+    - Basic statistical analysis and interpretation
+    - Visualization design and best practices
+    - Performance metrics and KPI development
+    - Business intelligence and reporting concepts
 
-### Mid-Market Funds ($500M - $2B AUM)
-- **Core Team**: 4-6 people (50-75% time commitment)
-- **Duration**: 12-20 weeks
-- **Total Effort**: 30-50 person-weeks
+    **Training Approach**:
+    - Online courses in data analysis and visualization
+    - Hands-on workshops with Amos platform tools
+    - Mentoring from experienced data analysts
+    - Industry-specific analytics training programs
+  </Accordion>
+</AccordionGroup>
 
-### Large Funds (> $2B AUM)
-- **Core Team**: 6-8 people (75-100% time commitment)
-- **Duration**: 16-24 weeks
-- **Total Effort**: 50-80 person-weeks
+## Resource Allocation by Fund Size
 
-## Training & Development Plan
+### Emerging Funds (< $250M AUM)
+**Core Team**: 3-4 people | **Implementation Duration**: 8-12 weeks
 
-### Pre-Implementation Training
+| Role | Time Commitment | Notes |
+|------|----------------|-------|
+| Executive Sponsor | 2 hours/week | Often Managing Partner or COO |
+| Project Manager | 15-20 hours/week | May be external consultant |
+| Technical Lead | 10-15 hours/week | Often outsourced or part-time |
+| Business Process Owner | 8-12 hours/week | Senior operations person |
+
+**Total Investment**: 20-30 person-weeks
+
+### Growth Funds ($250M - $1B AUM)
+**Core Team**: 4-5 people | **Implementation Duration**: 12-16 weeks
+
+| Role | Time Commitment | Notes |
+|------|----------------|-------|
+| Executive Sponsor | 3 hours/week | COO or CFO |
+| Project Manager | 25-30 hours/week | Dedicated internal resource |
+| Technical Lead | 15-20 hours/week | Internal IT lead with support |
+| Business Process Owner | 12-15 hours/week | Operations manager |
+| Data Steward | 8-10 hours/week | Analyst or operations specialist |
+
+**Total Investment**: 40-55 person-weeks
+
+### Established Funds (> $1B AUM)
+**Core Team**: 5-7 people | **Implementation Duration**: 16-20 weeks
+
+| Role | Time Commitment | Notes |
+|------|----------------|-------|
+| Executive Sponsor | 4 hours/week | CFO or Chief Data Officer |
+| Project Manager | 30-35 hours/week | Dedicated PM with experience |
+| Technical Lead | 20-25 hours/week | Senior IT architect |
+| Business Process Owner | 15-20 hours/week | Senior operations manager |
+| Data Steward | 10-15 hours/week | Dedicated data analyst |
+| Department Champions | 5 hours/week each | 3-4 department representatives |
+
+**Total Investment**: 65-85 person-weeks
+
+## Training and Development Program
+
+### Pre-Implementation Phase (Weeks -4 to -1)
+
 <Steps>
-  <Step title="Platform Overview">
-    Executive briefing on Amos capabilities and benefits
+  <Step title="Executive Briefing">
+    **Duration**: 2 hours | **Audience**: Steering Committee
+    
+    - Amos platform overview and capabilities
+    - Implementation methodology and timeline
+    - Success factors and risk mitigation
+    - Role expectations and commitments
   </Step>
-  <Step title="Technical Architecture">
-    Deep dive for technical team members
+  
+  <Step title="Technical Deep Dive">
+    **Duration**: 1 day | **Audience**: Technical Lead, IT Team
+    
+    - Platform architecture and integration patterns
+    - Security and compliance frameworks
+    - Development and deployment processes
+    - Troubleshooting and support procedures
   </Step>
-  <Step title="Project Management">
-    Implementation methodology and best practices
+  
+  <Step title="Business Process Workshop">
+    **Duration**: 1 day | **Audience**: Business Process Owner, Champions
+    
+    - Current state process mapping
+    - Future state vision and design
+    - Requirements gathering techniques
+    - Change management strategies
   </Step>
 </Steps>
 
-### Implementation Training
-<Steps>
-  <Step title="Configuration & Setup">
-    Hands-on training for system configuration
-  </Step>
-  <Step title="Integration Development">
-    Technical training for integration team
-  </Step>
-  <Step title="User Acceptance Testing">
-    Testing methodology and execution training
-  </Step>
-</Steps>
+### Implementation Phase Training
 
-### Post-Implementation Training
 <Steps>
-  <Step title="End User Training">
-    Comprehensive training for all system users
+  <Step title="Platform Configuration">
+    **Duration**: 2 days | **Audience**: Technical Lead, Data Steward
+    
+    - Hands-on system configuration
+    - Data integration setup and testing
+    - User access and security configuration
+    - Monitoring and alerting setup
   </Step>
+  
+  <Step title="Business User Training">
+    **Duration**: 1 day | **Audience**: All End Users
+    
+    - Platform navigation and core features
+    - Report creation and customization
+    - Data quality monitoring and validation
+    - Support and escalation procedures
+  </Step>
+  
   <Step title="Administrator Training">
-    Advanced training for system administrators
-  </Step>
-  <Step title="Ongoing Support">
-    Continuous learning and optimization programs
+    **Duration**: 2 days | **Audience**: Technical Lead, Data Steward
+    
+    - Advanced configuration and customization
+    - User management and access control
+    - Performance monitoring and optimization
+    - Backup and disaster recovery procedures
   </Step>
 </Steps>
 
-## Success Factors
+### Post-Implementation Support (Months 1-6)
 
-### Team Effectiveness
-- Clear roles and responsibilities definition
-- Regular communication and coordination
-- Adequate time allocation and commitment
-- Strong executive support and sponsorship
+<Steps>
+  <Step title="Office Hours">
+    **Frequency**: Weekly | **Duration**: 1 hour
+    
+    - Q&A sessions with Amos experts
+    - Best practice sharing and optimization
+    - New feature training and adoption
+    - Troubleshooting and problem resolution
+  </Step>
+  
+  <Step title="Advanced Training">
+    **Frequency**: Monthly | **Duration**: 2 hours
+    
+    - Advanced analytics and reporting techniques
+    - Integration development and customization
+    - Performance optimization strategies
+    - New feature rollout and adoption
+  </Step>
+  
+  <Step title="User Community">
+    **Frequency**: Quarterly | **Duration**: Half day
+    
+    - User conference and best practice sharing
+    - Product roadmap and feature previews
+    - Peer networking and collaboration
+    - Advanced use case development
+  </Step>
+</Steps>
 
-### Skill Development
-- Proactive training and development planning
-- Knowledge transfer from Amos experts
-- Hands-on experience and mentoring
-- Continuous learning and improvement culture
+## Change Management Considerations
 
-## Next Steps
+### Organizational Impact Assessment
 
-<Note>
-Team formation and training typically begins 2-4 weeks before technical implementation to ensure readiness and alignment.
-</Note>
+<AccordionGroup>
+  <Accordion title="Process Changes">
+    **High Impact Areas**:
+    - Reporting workflows and timelines
+    - Data validation and quality control procedures
+    - System access and security protocols
+    - Performance measurement and analysis methods
 
-Ready to build your implementation team? [Contact our team](/fund-leaders/implementation/getting-started) to discuss specific resource requirements and training programs for your fund.
+    **Mitigation Strategies**:
+    - Gradual rollout with parallel processing during transition
+    - Comprehensive training and documentation
+    - Clear communication of benefits and rationale
+    - Regular feedback collection and process refinement
+  </Accordion>
+
+  <Accordion title="Role Evolution">
+    **Affected Positions**:
+    - Operations analysts (more strategic, less manual work)
+    - IT staff (platform administration vs. custom development)
+    - Management (real-time insights vs. periodic reports)
+    - Compliance (automated monitoring vs. manual validation)
+
+    **Support Approach**:
+    - Career development planning and new skill acquisition
+    - Clear communication of role evolution and opportunities
+    - Training programs to develop new competencies
+    - Recognition and reward for successful adaptation
+  </Accordion>
+
+  <Accordion title="Cultural Transformation">
+    **Key Shifts**:
+    - From reactive to proactive data-driven decision making
+    - From siloed to integrated cross-functional collaboration
+    - From manual to automated process execution
+    - From periodic to real-time performance monitoring
+
+    **Enablement Tactics**:
+    - Leadership modeling of new behaviors and expectations
+    - Success story sharing and celebration
+    - Metrics and incentives aligned with new ways of working
+    - Continuous improvement culture and feedback loops
+  </Accordion>
+</AccordionGroup>
+
+### Success Metrics and KPIs
+
+**Team Effectiveness Metrics**:
+- Training completion rates and assessment scores
+- User adoption rates and platform utilization
+- Time to competency for new team members
+- Employee satisfaction and engagement scores
+
+**Operational Impact Metrics**:
+- Reduction in manual reporting effort (target: 60-80%)
+- Improvement in data accuracy and consistency (target: 95%+)
+- Faster decision-making cycles (target: 50% reduction)
+- Enhanced analytical capabilities and insights generation
+
+## Next Steps & Resources
+
+<CardGroup cols={2}>
+  <Card title="Team Assessment Tool" icon="users">
+    Evaluate your current team capabilities and identify skill gaps using our comprehensive assessment framework
+  </Card>
+  <Card title="Training Program Design" icon="graduation-cap">
+    Develop a customized training program based on your team's specific needs and experience levels
+  </Card>
+</CardGroup>
+
+<CardGroup cols={2}>
+  <Card title="Change Management Planning" icon="arrows-rotate">
+    Create a comprehensive change management strategy to ensure smooth organizational transformation
+  </Card>
+  <Card title="Resource Planning Consultation" icon="calendar" href="mailto:implementation@amos.com">
+    Schedule a consultation to discuss your specific team requirements and resource planning needs
+  </Card>
+</CardGroup>
+
+---
+
+**Ready for the next step?** Learn about our comprehensive [change management approach](/fund-leaders/implementation/change-management) to ensure successful organizational transformation.
